--- a/src/app/Gopkg.toml
+++ b/src/app/Gopkg.toml
@@ -32,3 +32,15 @@
 [[constraint]]
   name = "github.com/messagebird/go-rest-api"
   version = "4.2.1"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.2"
+
+[[constraint]]
+  name = "github.com/nyaruka/phonenumbers"
+  version = "1.0.24"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/vektra/mockery"
